21/12/08 Julien Dutheil
* Return type for clone() methods corrected (Sequence, Site, SiteContainer and derivated classes).
* Bug fixed in SequenceApplicationTools::get[Sequence/Site]Container, phylip format.

21/07/08 -*- Version 1.5.0 -*-

05/12/08 Julien Dutheil
* VectorSiteContainer::getSite() faster (more than 10 times faster on a ~500
	sequences data set!)

04/12/08 Julien Dutheil
* Fixed missing redefinition of translate and reverse methods in class DNAToRNA.
* Made inheritance virtual.

01/12/08 Julien Dutheil
* New methods getSupportedInts and getSupportedChars in Alphabet classes.

18/11/08 Julien Dutheil
* biopp-help-forum 91 (by Stephen Smith): Fasta, Mase, Clustal and Phylip now
  have an option to turn off the name checking and decrease loading time.
* biopp-help-forum 93 (by Stephen Smith): Phylip format now supports any
 delimiter when reading/writing files in extended format.

14/11/08 Sylvain Gaillard
* New method SequenceTools::subtractHaplotype(Sequence, Sequence, string,
  unsigned int).

07/11/08 Julien Dutheil
* New contructor in VectorSiteContainer now as a tag to disable position
  checking, which can turn to be quite slow.

06/11/08 Sylvain Gaillard
* New class PhredPhd to read sequence from phd files produced by the phred
  program
* Removed an unused method in PhredPoly

05/11/08 Sylvain Gaillard
* New methods Alphabet::getGeneric(states) implemented in AbstractAlphabet,
  DefaultAlphabet, DNA, RNA and ProteicAlphabet.
* New alphabet exception CharStateNotSupportedException.
* New class PhredPoly to read sequence from poly files produced by the phred
  program.
* Fixed heterozygous site read in PhredPoly.

09/10/08 Julien Dutheil
* New method SequenceTools::invert(Sequence).

24/09/08 Bastien Boussau & Julien Dutheil
* Memory leak fixed in Fasta and Mase readers.

21/07/08 -*- Version 1.4.1 -*-

26/06/08 Julien Dutheil
* Bug fixed in Clustal format.

20/04/08 Julien Dutheil
* New interface ISequence2 for reading alignments.
