@@ -43,6 +43,7 @@ knowledge of the CeCILL license and that you accept its terms.
 #include "Fasta.h"
 
 #include "StringSequenceTools.h"
+#include <Utils/StringTokenizer.h>
 
 using namespace bpp;
 
@@ -53,24 +54,58 @@ void Fasta::appendFromStream(istream & input, VectorSequenceContainer & vsc) con
 	if (!input) { throw IOException ("Fasta::read: fail to open file"); }
 
 	string temp, name, sequence = "";  // Initialization
+  Comments cmts, seqcmts;
 
 	// Main loop : for all file lines
 	while(!input.eof())
   {
 		getline(input, temp, '\n');  // Copy current line in temporary string
 
-		// If first character is >
-		if(temp[0] == '>')
+    // If there is a header block
+    if (_extended && temp[0] == '#' && ! name.size())
     {
-			// If a name and a sequence were foundez
+      temp.erase(temp.begin());
+      if (temp[0] == '\\')
+      {
+        temp.erase(temp.begin());
+        cmts.push_back(temp);
+      }
+    }
+
+		// If first character is >
+    else if(temp[0] == '>')
+    {
+			// If a name and a sequence were found
 			if((name != "") && (sequence != ""))
       {
 				// New sequence creation, and addition in existing VectorSequenceContainer
-				vsc.addSequence(Sequence(name, sequence, vsc.getAlphabet()), _checkNames);
+        if (! _extended)
+        {
+				  vsc.addSequence(Sequence(name, sequence, vsc.getAlphabet()), _checkNames);
+        }
+        else
+        {
+          vsc.addSequence(Sequence(name, sequence, seqcmts, vsc.getAlphabet()), _checkNames);
+          seqcmts.clear();
+        }
+        name = "";
 				sequence = "";
 			}
 			// Sequence name isolation
-			name = temp;
+      if (! _extended)
+      {
+			  name = temp;
+      }
+      else
+      {
+        StringTokenizer * st = new StringTokenizer(temp, " \\", true, false);
+        name = st->nextToken();
+        while (st->hasMoreToken())
+        {
+          seqcmts.push_back(st->nextToken());
+        }
+        delete st;
+      }
 			name.erase(name.begin());  // Character > deletion
 		}
     else sequence += temp;  // Sequence isolation
@@ -79,8 +114,21 @@ void Fasta::appendFromStream(istream & input, VectorSequenceContainer & vsc) con
 	// Addition of the last sequence in file
 	if((name != "") && (sequence != ""))
   {
-		vsc.addSequence(Sequence(name, sequence, vsc.getAlphabet()), _checkNames);
+		if (! _extended)
+    {
+      vsc.addSequence(Sequence(name, sequence, vsc.getAlphabet()), _checkNames);
+    }
+    else
+    {
+      vsc.addSequence(Sequence(name, sequence, seqcmts, vsc.getAlphabet()), _checkNames);
+    }
 	}
+
+  // Addition of general comments
+  if (_extended && cmts.size())
+  {
+    vsc.setGeneralComments(cmts);
+  }
 }
 
 /****************************************************************************************/
@@ -92,12 +140,28 @@ void Fasta::write(ostream & output, const SequenceContainer & sc) const throw (E
 
 	string seq, temp = "";  // Initialization
 
+  if (_extended)
+  {
+    // Loop for all general comments
+    for (unsigned int i = 0 ; i < sc.getGeneralComments().size() ; i++)
+    {
+      output << "#\\" << sc.getGeneralComments()[i] << endl;
+    }
+    output << endl;
+  }
+
 	// Main loop : for all sequences in vector container
 	vector<string> names = sc.getSequencesNames();
 	for (unsigned int i = 0; i < names.size(); i ++)
   {
     // Sequence's commentaries writing
-		output << ">" << names[i] << endl;
+		output << ">" << names[i];
+    if (_extended)
+    {
+      for (unsigned int j = 0 ; j < sc.getComments(names[i]).size() ; j++)
+        output << " \\" << sc.getComments(names[i])[j];
+    }
+    output << endl;
 		
 		// Sequence cutting to specified characters number per line
 		seq = sc.toString(names[i]);
